--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/01.loader.js";
+      var loaderUrl = buildUrl + "/02.loader.js";
       var config = {
-        dataUrl: buildUrl + "/01.data.gz",
-        frameworkUrl: buildUrl + "/01.framework.js.gz",
-        codeUrl: buildUrl + "/01.wasm.gz",
+        dataUrl: buildUrl + "/02.data",
+        frameworkUrl: buildUrl + "/02.framework.js",
+        codeUrl: buildUrl + "/02.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Lotus",
